[package]
name = "wolf_engine"
description = "A game framework with a focus on flexibility and ease of use."
version = "0.26.0"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "game", "gamedev"]
categories = ["game-development", "game-engines"]

[dependencies]
wolf_engine_core = {path = "engine/wolf_engine_core", version = "0.26.0"}
wolf_engine_framework = {path = "engine/wolf_engine_framework", version = "0.26.0", optional = true}
wolf_engine_window = {path = "engine/wolf_engine_window", version = "0.26.0", optional = true}

[dev-dependencies]
log = "0.4"

[features]
default = ["framework"]
framework = ["wolf_engine_framework"]
window = ["wolf_engine_window"]
serde = ["wolf_engine_window/serde"]

[workspace]
members = ["engine/*"]

[[example]]
name = "plugins"
required-features = ["framework"]
