[package]
name = "wolf_engine_core"
version = "0.24.1"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
keywords = ["wolf-engine", "game", "gamedev"]
categories = ["game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

# Optional Dependencies
simple_logger = {version = "1.13", optional = true}

[dev-dependencies]
test-case = "1.2"
mockall = "0.11"
ntest = "0.8"

[features]
logging = ["simple_logger"]
