[package]
name = "wolf_engine_core"
description = "A highly-portable core providing just the basic types, tools, and functions for Wolf Engine."
version = "0.26.0"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "game", "gamedev"]
categories = ["game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wolf_engine_codegen = {path = "../wolf_engine_codegen", version = "0.26.0"}
resources = "1.1.0"
legion = {version = "0.4.0", default-features = false}
log = "0.4"

# Optional Dependencies
simple_logger = {version = "1.13", optional = true}
generic_event_queue = "0.1.0"

[dev-dependencies]
legion = {version = "0.4.0", default-features = false, features = ["codegen"]}
log = "0.4"
test-case = "1.2"
mockall = "0.11"
ntest = "0.8"

[features]
default = ["parallel"]
logging = ["simple_logger"]
serde = ["legion/serialize"]
parallel = ["legion/parallel"]
extended_tuple_impls = ["legion/extended-tuple-impls"]
