[package]
name = "wolf_engine_framework"
version = "0.24.1"
edition = "2021"
keywords = ["wolf-engine", "game", "gamedev"]
categories = ["game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wolf_engine_core = {path = "../wolf_engine_core"}
log = "0.4"

[dev-dependencies]
test-case = "1.2"
mockall = "0.11"
ntest = "0.8"

