[package]
name = "wolf_engine_window"
version = "0.25.0"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "game", "gamedev", "gui"]
categories = ["game-development", "game-engines", "gui"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["serde_derive"] }

