[package]
name = "wolf_engine_window"
version = "0.26.0"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "game", "gamedev", "gui"]
categories = ["game-development", "game-engines", "gui"]

[dependencies]
wolf_engine_core = {path = "../wolf_engine_core", version = "0.26.0"}
raw-window-handle = "0.5"
lazy_static = "1.4"

serde = { version = "1.0", optional = true, features = ["serde_derive"] }

[dev-dependencies]
toml = "0.5"
mockall = "0.11"

