[package]
name = "wolf_engine_codegen"
description = "The proc-macro crate for Wolf Engine."
version = "0.26.0"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine"]

[lib]
proc-macro = true

[dependencies]
