[package]
name = "wolf_engine_core"
description = "A highly-portable core providing just the basic types, tools, and functions for Wolf Engine."
version = "0.26.0"
authors = ["AlexiWolf <alexiwolf@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "game", "gamedev"]
categories = ["game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
shared_resources = "0.1.0"
generic_event_queue = "0.1.0"
downcast-rs = "1.2.0"

# Optional Dependencies
simple_logger = {version = "1.13", optional = true}

[dev-dependencies]
test-case = "1.2"
mockall = "0.11"
ntest = "0.8"

[features]
default = []
logging = ["simple_logger"]
