[package]
name = "wolf_engine_graphics"
description = "A low-level grpahics library for Wolf Engine based on WGPU."
version = "0.26.0"
edition = "2021"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "game", "gamedev"]
categories = ["game-development", "game-engines"]

[dependencies]
wolf_engine_core = {path = "../wolf_engine_core", version = "0.26.0"}
log = "0.4"
wgpu = "0.19.1"
raw-window-handle = "0.6.0"
bytemuck = "1.14.3"
cgmath = { version = "0.18.0", features = ["mint"] }

